tests/compile_fail/assign_wrong_type.stderr
warning: unused import: `whippyunits::*`
 --> tests/compile_fail/assign_wrong_type.rs:2:5
  |
2 | use whippyunits::*;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
 --> tests/compile_fail/assign_wrong_type.rs:9:26
  |
9 |     let mass: Kilogram = length;
  |               --------   ^^^^^^ expected `1`, found `0`
  |               |
  |               expected due to this
  |
  = note: expected struct `Quantity<Scale, Dimension<_M<1>, _L<0>, _T<0>, _I<0>, _Θ<0>, _N<0>, _J<0>, _A<0>>>`
             found struct `Quantity<Scale, Dimension<_M<0>, _L<1>, _T<0>, _I<0>, _Θ<0>, _N<0>, _J<0>, _A<0>>>`
